add spring-cloud-stream-batch-demo